<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".masterlogin.MasterLoginActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/clLogo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/logo"
            android:textColor="@color/colorTextGray"
            android:textSize="82sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view2"
            android:layout_width="4dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="36dp"
            android:background="@color/colorTaskNew"
            app:layout_constraintBottom_toTopOf="@+id/view3"
            app:layout_constraintEnd_toStartOf="@+id/tvLogo"
            app:layout_constraintTop_toTopOf="@+id/tvLogo" />

        <View
            android:id="@+id/view3"
            android:layout_width="4dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorTaskAnswered"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toStartOf="@+id/tvLogo"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <View
            android:id="@+id/view"
            android:layout_width="4dp"
            android:layout_height="0dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorTaskExpired"
            app:layout_constraintBottom_toBottomOf="@+id/tvLogo"
            app:layout_constraintEnd_toStartOf="@+id/tvLogo"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <ImageButton
            android:id="@+id/ibBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_transp_states"
            android:padding="8dp"
            android:src="@drawable/baseline_keyboard_arrow_left_white_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:foregroundGravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/masterlogin_caption"
        android:textColor="@color/colorTextGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clLogo"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/materialEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/masterlogin_hint"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:met_baseColor="@color/colorTextGray"
        app:met_clearButton="true"
        app:met_floatingLabel="normal"
        app:met_floatingLabelAlwaysShown="false"
        app:met_floatingLabelAnimating="true"
        app:met_floatingLabelText="@string/masterlogin_hint"
        app:met_floatingLabelTextColor="@color/colorTextGray"
        app:met_textColor="@color/colorTextDark"
        app:met_underlineColor="@color/colorTextGray" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_second_states"
        android:text="@string/masterlogin_but_enter"
        android:textColor="@color/colorSecondary"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/materialEditText"
        app:layout_constraintTop_toBottomOf="@+id/materialEditText" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/button_transp_states"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/masterlogin_but_new"
        android:textColor="@color/colorSecondary"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/materialEditText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/button" />

</android.support.constraint.ConstraintLayout>